--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,93 +1,79 @@
+appnope==0.1.3
 asgiref==3.5.2
-attrs==19.3.0
-Automat==0.8.0
-blinker==1.4
+asttokens==2.1.0
+backcall==0.2.0
 boto3==1.23.1
 botocore==1.26.1
-certifi==2019.11.28
-chardet==3.0.4
+certifi==2022.9.24
+chardet==5.0.0
 charset-normalizer==2.1.1
 click==8.1.3
-cloud-init==22.2
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==2.8
-dbus-python==1.2.16
+contourpy==1.0.6
+copydetect==0.4.3
+cycler==0.11.0
+debugpy==1.6.3
+decorator==5.1.1
 distlib==0.3.4
-distro==1.4.0
-distro-info===0.23ubuntu1
 Django==3.2.16
+django-cors-headers==3.13.0
+django-filter==22.1
 djangorestframework==3.14.0
-entrypoints==0.3
+docker==6.0.1
+entrypoints==0.4
+executing==1.2.0
 filelock==3.6.0
 Flask==2.1.2
-httplib2==0.14.0
-hyperlink==19.0.0
-idna==2.8
+fonttools==4.38.0
+idna==3.4
 importlib-metadata==4.11.3
-incremental==16.10.1
+ipykernel==6.17.1
+ipython==8.6.0
 itsdangerous==2.1.2
+jedi==0.18.1
 Jinja2==3.1.2
 jmespath==1.0.0
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
+jupyter_client==7.4.7
+jupyter_core==5.0.0
+kiwisolver==1.4.4
 Markdown==3.4.1
 MarkupSafe==2.1.1
-more-itertools==4.2.0
-netifaces==0.10.4
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
+multimetric==1.3.0
+nest-asyncio==1.5.6
 numpy==1.21.6
-oauthlib==3.1.0
+packaging==21.3
 pandas==1.3.5
+parso==0.8.3
 pbr==5.9.0
-pexpect==4.6.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.3.0
 platformdirs==2.5.2
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyrsistent==0.15.5
-pyserial==3.4
-python-apt==2.0.0+ubuntu0.20.4.7
+prompt-toolkit==3.0.32
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.13.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
 pytz==2022.1
-PyYAML==5.3.1
+pyzmq==24.0.1
 requests==2.28.1
-requests-unixsocket==0.2.0
 s3transfer==0.5.2
-SecretStorage==2.3.1
-service-identity==18.1.0
-simplejson==3.16.0
 six==1.16.0
-sos==4.3
 sqlparse==0.4.3
-ssh-import-id==5.10
+stack-data==0.6.1
 stevedore==3.5.0
-systemd-python==234
-Twisted==18.9.0
-typing-extensions==4.2.0
-ubuntu-advantage-tools==27.9
-ufw==0.36
-unattended-upgrades==0.1
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.5.0
+typing_extensions==4.2.0
 urllib3==1.26.9
 virtualenv==20.14.1
 virtualenv-clone==0.5.7
 virtualenvwrapper==4.8.4
-wadllib==1.3.3
+wcwidth==0.2.5
+websocket-client==1.4.2
 Werkzeug==2.1.2
 zipp==3.8.0
-zope.interface==4.7.1
-multimetric===1.3.0
-
