--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,6 @@ chardet==5.0.0
 charset-normalizer==2.1.1
 click==8.1.3
 contourpy==1.0.6
-copydetect==0.4.3
 cycler==0.11.0
 debugpy==1.6.3
 decorator==5.1.1
@@ -39,6 +38,7 @@ Markdown==3.4.1
 MarkupSafe==2.1.1
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
+mccabe==0.7.0
 multimetric==1.3.0
 nest-asyncio==1.5.6
 numpy==1.21.6
@@ -54,7 +54,12 @@ prompt-toolkit==3.0.32
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycode-similar==1.4
+pycodestyle==2.10.0
+pydocstyle==6.1.1
+pyflakes==3.0.1
 Pygments==2.13.0
+pylama==8.4.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.1
@@ -62,6 +67,7 @@ pyzmq==24.0.1
 requests==2.28.1
 s3transfer==0.5.2
 six==1.16.0
+snowballstemmer==2.2.0
 sqlparse==0.4.3
 stack-data==0.6.1
 stevedore==3.5.0
