--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@monaco-editor/react": "^4.4.6",
     "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.15",
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,12 +13,16 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.0",
+    "clipboardy": "^3.0.0",
+    "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.6.0",
+    "react-code-diff-lite": "^1.0.13",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-split-pane": "^0.1.92",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
